--- a/index.html
+++ b/index.html
@@ -8,19 +8,11 @@
 </head>
 <body>
    
-   <!--<h1 id="myh1"> </h1>
-   <p id="my p"></p>-->
-<label >enter age:</label><br>
-<input type="text" id="myText" placeholder="enter age"></input>
-<button type="submit" id="mysubmit">submit</button>
-<p id="resultelement"></p>
 
 
+    
 
-
-
-
-    <script src="elseif.js"></script>
+    <script src="checkerdproperty.js"></script>
    
 </body>
 </html>
